--- a/main.css
+++ b/main.css
@@ -1,31 +1,44 @@
 .box1 {
   background-color: blueviolet;
+  border: 5px solid blue;
 }
 
 .box2 {
   background-color: greenyellow;
+  border: 2px dotted red;
+  border-radius: 5px;
 }
 
 .text1 {
   background-color: blue;
+  color: #FFC300;
+
 }
 
 .text2 {
   background-color: burlywood;
+  color: rgb(214,122,127);
+  background-color: aliceblue;
 }
 
 .box3 {
   background-color: lavender;
+  opacity: 0.6;
 }
 
 .box5 {
   background-color: lemonchiffon;
+  box-shadow:  2px 8px 15px rgb(0, 128, 128, 0.6);
 }
 
 .box6 {
   background-color: papayawhip;
+  box-shadow: 5px -10px #800000;
 }
 
+h2 {
+  opacity: 0.5;
+}
 
 /* do not change below this line */
 
